@@ -1,3 +1,4 @@
+    - Ticket #116 - Added &to-json to be exported via Bailador
     - Ticket #214 - auto generated head routes didnt work properly for redirections
     - Ticket #215 - redirect() can set different status codes - 302 is the default
     - Ticket #216 - Bailador::Feature::AutoHead is in core and allways used
